<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/gradient_bg">

    <RelativeLayout
        android:id="@+id/rl_action_bar_replacemet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="top"
        android:visibility="gone">

        <ImageButton
            android:id="@+id/btn_back_press_from_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_close_white_24dp"
            android:background="@android:color/transparent"/>

    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:paddingStart="6dp"
        android:paddingEnd="6dp"
        android:textColor="#fff"
        android:text="NIP de l'expediteur pour continuer"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="4"
        android:visibility="gone">

        <EditText
            android:id="@+id/edDigit1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="32sp"
            android:maxLength="1"/>

        <EditText
            android:id="@+id/edDigit2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:maxLength="1"
            android:textSize="32sp" />

        <EditText
            android:id="@+id/edDigit3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:maxLength="1"
            android:textSize="32sp" />

        <EditText
            android:id="@+id/edDigit4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:maxLength="1"
            android:textSize="32sp" />

    </LinearLayout>

    <EditText
        android:id="@+id/et_pin_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:ems="4"
        android:layout_margin="16dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <TableLayout
            android:id="@+id/keyboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="16dp"
            android:showDividers="none">

            <TableRow style="@style/keyboard_row"
                android:showDividers="none">

                <TextView
                    android:id="@+id/t9_key_1"
                    style="@style/keyboard_number_button"
                    android:text="@string/number_one"/>

                <TextView
                    android:id="@+id/t9_key_2"
                    style="@style/keyboard_number_button"
                    android:text="@string/number_two"/>

                <TextView
                    android:id="@+id/t9_key_3"
                    style="@style/keyboard_number_button"
                    android:text="@string/number_three"/>
            </TableRow>

            <TableRow style="@style/keyboard_row"
                android:showDividers="none">

                <TextView
                    android:id="@+id/t9_key_4"
                    style="@style/keyboard_number_button"
                    android:text="@string/number_four"/>

                <TextView
                    android:id="@+id/t9_key_5"
                    style="@style/keyboard_number_button"
                    android:text="@string/number_five"/>

                <TextView
                    android:id="@+id/t9_key_6"
                    style="@style/keyboard_number_button"
                    android:text="@string/number_six"/>
            </TableRow>

            <TableRow style="@style/keyboard_row"
                android:showDividers="none">

                <TextView
                    android:id="@+id/t9_key_7"
                    style="@style/keyboard_number_button"
                    android:text="@string/number_seven"/>

                <TextView
                    android:id="@+id/t9_key_8"
                    style="@style/keyboard_number_button"
                    android:text="@string/number_eight"/>

                <TextView
                    android:id="@+id/t9_key_9"
                    style="@style/keyboard_number_button"
                    android:text="@string/number_nine"/>
            </TableRow>

            <TableRow style="@style/keyboard_row"
                android:showDividers="none">

                <TextView
                    android:id="@+id/t9_key_clear"
                    style="@style/keyboard_button"
                    android:text="@string/btn_clear"
                    android:textSize="26sp"
                    android:textColor="@color/editTextColor"/>

                <TextView
                    android:id="@+id/t9_key_0"
                    style="@style/keyboard_number_button"
                    android:text="@string/number_zero"/>

                <TextView
                    android:id="@+id/t9_key_backspace"
                    style="@style/keyboard_button"
                    android:text="@string/btn_backspace"
                    android:textSize="26sp"
                    android:textColor="@color/editTextColor"/>
            </TableRow>

            <Button
                android:id="@+id/btn_keypad_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="68dp"
                android:layout_marginLeft="68dp"
                style="@style/Base.TextAppearance.AppCompat.Widget.Button.Colored"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/round_shape_btn"
                android:text="Envoyer"/>
        </TableLayout>
    </LinearLayout>
</LinearLayout>